--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,10 +1,11 @@
 <!--  Replace menu links here -->
-
+<!-- Commented by sriniak 20200517
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
 </li>
+-->
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
+<a class="nav-link" href="{{site.baseurl}}/about.md">About</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
@@ -19,4 +20,4 @@
 <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/donate/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
 </li>
---> 
+-->
