--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -5,7 +5,7 @@
 </li>
 -->
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/about.md">About</a>
+<a class="nav-link" href="{{site.baseurl}}/about.html">About</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
