added Privacy Policy link in footer
added Privacy Policy link in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,10 @@
             <div>
                 <span class="navbar-brand mr-2 mb-0"><strong>Srinivasa Kumar</strong></span>
                 <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
-
+            </div>
+            <div>
+              <a class="nav-link" href="{{site.baseurl}}/privacy-policy.html">Privacy Policy</a>
+            </div>
                 <!--  Github Repo Star Btn-->
                 <!-- Commented by sriniak 20200517
                 <a class="text-dark ml-1" target="_blank" href="https://github.com/wowthemesnet/mundana-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a>
