--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,35 @@
+<!-- Commented by sriniak 20200517
 <h5 class="mb-3">Mundana Jekyll Theme</h5>
 
 <p>Hi! The website you are previewing is a demonstration for Mundana Jekyll theme, hosted on Github, made by <a href="https://www.wowthemes.net/donate/">Sal</a>.</p>
 
 <a target="_blank" href="https://www.wowthemes.net/mundana-jekyll-theme/" class="btn btn-warning d-block mb-2"><i class="fa fa-file"></i> Documentation</a>
 
-<a target="_blank" class="btn btn-danger d-block" href="https://www.wowthemes.net/donate/"><i class="fa fa-coffee"></i> Buy me a coffee</a> 
+<a target="_blank" class="btn btn-danger d-block" href="https://www.wowthemes.net/donate/"><i class="fa fa-coffee"></i> Buy me a coffee</a>
+-->
+<h5 class="mb-3">Hi, I'm Srini</h5>
+
+<p>An Entrepreneur and founder of <a href="https://www.thelivemoments.com">The LIVE Moments (TLM)</a> (a Media and Digital Solutions to support Enterprise's Digital Journey), an SAP ERP Veteran with Programming, Marketing and Photography skills.</p>
+
+<ul>
+  <li>SAP ERP</li>
+  <li>Mobile and Web Programming</li>
+  <li>Augmented Reality</li>
+  <li>Technology Articles</li>
+  <li>Marketing and Sales</li>
+  <li>Photography</li>
+  <li>and other useful fun topics</li>
+</ul>
+
+<p>This is more than a blog too, as I Publish notes on everything I learn from Books, Articles, Podcasts, Blogs and Videos I watch.</p>
+
+<p>
+  If you like my blog, I shall be happy to share the newsletter, the "Biweekly Bytes".
+  It's one email once in two weeks with everything interesting I've read or found, plus new articles and book notes from me.
+</p>
+
+<p> Happy reading :) </p>
+
+<a target="_blank" <i class="fa fa-twitter"></i> href="https://twitter.com/ASrinivasaKumar/">Follow on Twitter</a>
+<a target="_blank" <i class="fa fa-facebook"></i> href="https://www.facebook.com/sriniak">Let's be friends</a>
+<a target="_blank" <i class="fa fa-linkedin"></i> href="https://www.linkedin.com/in/sriniak">Let's Connect</a>
