--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,10 @@
 
 <p> Happy reading :) </p>
 
-<a target="_blank" <i class="fa fa-twitter"></i> href="https://twitter.com/ASrinivasaKumar/">Follow on Twitter</a>
-<a target="_blank" <i class="fa fa-facebook"></i> href="https://www.facebook.com/sriniak">Let's be friends</a>
-<a target="_blank" <i class="fa fa-linkedin"></i> href="https://www.linkedin.com/in/sriniak">Let's Connect</a>
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Add font awesome icons -->
+<a href="https://twitter.com/ASrinivasaKumar/" class="fa fa-facebook"></a>
+<a href="https://www.facebook.com/sriniak" class="fa fa-twitter"></a>
+<a href="https://www.linkedin.com/in/sriniak" class="fa fa-linkedin"></a>
