--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,6 +11,8 @@
 
 <p>An Entrepreneur and founder of <a href="https://www.thelivemoments.com">The LIVE Moments (TLM)</a> (a Media and Digital Solutions to support Enterprise's Digital Journey), an SAP ERP Veteran with Programming, Marketing and Photography skills.</p>
 
+<p> This site hosts all of my writings related to: </p>
+
 <ul>
   <li>SAP ERP</li>
   <li>Mobile and Web Programming</li>
