updated sidebar.html and socialicons.css
updated sidebar.html and socialicons.css

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,6 +36,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Add font awesome icons -->
-<a href="https://twitter.com/ASrinivasaKumar/" class="fa fa-facebook"></a>
-<a href="https://www.facebook.com/sriniak" class="fa fa-twitter"></a>
-<a href="https://www.linkedin.com/in/sriniak" class="fa fa-linkedin"></a>
+<a href="https://twitter.com/ASrinivasaKumar/" class="iconsfa fa-facebook"></a>
+<a href="https://www.facebook.com/sriniak" class="iconsfa fa-twitter"></a>
+<a href="https://www.linkedin.com/in/sriniak" class="iconsfa fa-linkedin"></a>
