--- a/assets/css/socialicons.css
+++ b/assets/css/socialicons.css
@@ -1,15 +1,15 @@
 /* -- Added by sriniak 20200517 --*/
 /* Style all font awesome icons */
-.fa {
+.iconsfa {
   padding: 20px;
   font-size: 30px;
-  width: 30px;
+  width: 50px;
   text-align: center;
   text-decoration: none;
 }
 
 /* Add a hover effect if you want */
-.fa:hover {
+.iconsfa:hover {
   opacity: 0.7;
 }
 
