udpated links to open in a new window
udpated links to open in a new window

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 -->
 <h5 class="mb-3">Hi, I'm Srini</h5>
 
-<p>An Entrepreneur and founder of <a href="https://www.thelivemoments.com">The LIVE Moments (TLM)</a> (a Media and Digital Solutions to support Enterprise's Digital Journey), an SAP ERP Veteran with Programming, Marketing and Photography skills.</p>
+<p>An Entrepreneur and founder of <a target="_blank" href="https://www.thelivemoments.com">The LIVE Moments (TLM)</a> (a Media and Digital Solutions to support Enterprise's Digital Journey), an SAP ERP Veteran with Programming, Marketing and Photography skills.</p>
 
 <p> This site hosts all of my writings related to: </p>
 
@@ -36,6 +36,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Add font awesome icons -->
-<a href="https://twitter.com/ASrinivasaKumar/" class="iconsfa fa-facebook"></a>
-<a href="https://www.facebook.com/sriniak" class="iconsfa fa-twitter"></a>
-<a href="https://www.linkedin.com/in/sriniak" class="iconsfa fa-linkedin"></a>
+<a target="_blank" href="https://twitter.com/ASrinivasaKumar/" class="iconsfa fa-facebook"></a>
+<a target="_blank" href="https://www.facebook.com/sriniak" class="iconsfa fa-twitter"></a>
+<a target="_blank" href="https://www.linkedin.com/in/sriniak" class="iconsfa fa-linkedin"></a>
