--- a/assets/css/socialicons.css
+++ b/assets/css/socialicons.css
@@ -16,19 +16,19 @@
 /* Set a specific color for each brand */
 
 /* Facebook */
-.fa-facebook {
+.iconsfa-facebook {
   background: #3B5998;
   color: white;
 }
 
 /* Twitter */
-.fa-twitter {
+.iconsfa-twitter {
   background: #55ACEE;
   color: white;
 }
 
 /* LinkedIn */
-.fa-linkedin {
+.iconsfa-linkedin {
   background: #007bb5;
   color: white;
 }
