--- a/assets/css/socialicons.css
+++ b/assets/css/socialicons.css
@@ -1,34 +1,34 @@
 /* -- Added by sriniak 20200517 --*/
 /* Style all font awesome icons */
-.iconsfa {
+.fa {
   padding: 20px;
   font-size: 30px;
-  width: 30px;
+  width: 50px;
   text-align: center;
   text-decoration: none;
 }
 
 /* Add a hover effect if you want */
-.iconsfa:hover {
+.fa:hover {
   opacity: 0.7;
 }
 
 /* Set a specific color for each brand */
 
 /* Facebook */
-.iconsfa-facebook {
+.fa-facebook {
   background: #3B5998;
   color: white;
 }
 
 /* Twitter */
-.iconsfa-twitter {
+.fa-twitter {
   background: #55ACEE;
   color: white;
 }
 
 /* LinkedIn */
-.iconsfa-linkedin {
+.fa-linkedin {
   background: #007bb5;
   color: white;
 }
